<resources>
    <string name="app_name">DPartner</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="history">History</string>
    <string name="key_serializable">key_serializable</string>
    <string name="order_list">Order List</string>
    <string name="order_detail">Order Details</string>
    <string name="please_check_network_connection">Something went wrong.Please Check your internet connection.</string>
    <string name="non_veg_orders">Non Veg Orders</string>
    <string name="veg_orders">Veg Orders</string>
    <string name="title">Title</string>
    <string name="order_history">Order History</string>
    <string name="key_shared_prefs">key_shared_prefs</string>
    <string name="key_logged_in">key_logged_in</string>
</resources>
