<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/rlytTopTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:layout_marginHorizontal="@dimen/_50dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rlytOrders"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/circle_color_red"
                android:elevation="@dimen/_10dp"
                android:padding="@dimen/_10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textIconQuickOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/ic_home_black"
                        android:shadowColor="#99000000"
                        android:shadowRadius="2"
                        android:textColor="@color/appColorWhite"
                        android:textSize="@dimen/font_40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textQuickOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_5dp"
                        android:text="@string/orders"
                        android:textColor="@color/appColorWhite" />

                </LinearLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlytHistory"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/circle_color_red"
                android:elevation="@dimen/_10dp"
                android:padding="@dimen/_10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textIconQuickOrder1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/ic_home_black"
                        android:shadowColor="#99000000"
                        android:shadowRadius="2"
                        android:textColor="@color/appColorWhite"
                        android:textSize="@dimen/font_40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textQuickOrder1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_5dp"
                        android:text="@string/history"
                        android:textColor="@color/appColorWhite" />

                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlytTopTwo"
            android:layout_marginHorizontal="@dimen/_50dp"
            android:layout_marginTop="@dimen/_50dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rlytVeg"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/circle_color_red"
                android:elevation="@dimen/_10dp"
                android:padding="@dimen/_10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/ic_home_black"
                        android:shadowColor="#99000000"
                        android:shadowRadius="2"
                        android:textColor="@color/appColorWhite"
                        android:textSize="@dimen/font_40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_5dp"
                        android:text="@string/veg"
                        android:textColor="@color/appColorWhite" />

                </LinearLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlytNonVeg"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/circle_color_red"
                android:elevation="@dimen/_10dp"
                android:padding="@dimen/_10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/ic_home_black"
                        android:shadowColor="#99000000"
                        android:shadowRadius="2"
                        android:textColor="@color/appColorWhite"
                        android:textSize="@dimen/font_40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_5dp"
                        android:text="@string/non_veg"
                        android:textColor="@color/appColorWhite" />

                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>